
2007/12/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed another bug in GWEN_Buffer_ReplaceBytes()


===========================================================================
MARK: released gwenhywfar-3.0.1 (2007/12/07)
===========================================================================


2007/12/05: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in GWEN_Buffer_ReplaceBytes()


===========================================================================
MARK: released gwenhywfar-3.0.0 (2007/11/22)
===========================================================================


2007/11/19: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- GWEN_Gui_CGui is now less verbous in NonInteractive mode


2007-11-18  Christian Stimming  <stimming@tuhh.de>

	* m4/lib-prefix.m4 et al: Add additional aclocal macros that are
	needed by the iconv.m4 macro.


===========================================================================
MARK: released gwenhywfar-2.9.15rc6 (2007/11/17)
===========================================================================


2007/11/17: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- simplified default settings for local installation mode (and WIN32)


===========================================================================
MARK: released gwenhywfar-2.9.14rc5 (2007/11/16)
===========================================================================


2007/11/16: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io_tls: fixed some problems in TLS server code (used by Libchipcard in
  private and secure IPC modes)


2007/11/15: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io_tls: added field dhParamFile which is used to specify a PEM encoded