@@ -31,7 +31,7 @@ GWENHYWFAR_VERSION_MAJOR=3
 GWENHYWFAR_VERSION_MINOR=0
 GWENHYWFAR_VERSION_PATCHLEVEL=1
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="stable"
+GWENHYWFAR_VERSION_TAG="svn"
 
 
 
